# aiutil

./: .gitignore  AGENTS.md  GEMINI.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: lint.yml  release.yml  remove_branch.yml  test.yaml  test_macos.yml  test_ubuntu.yml  test_windows.yml
.idx/: dev.nix
aiutil/: __init__.py  collections.py  cv.py  dataframe.py  datetime.py  filesystem.py  hash.py  memory.py  pdf.py  poetry.py  pypi.py  shell.py  sql.py  utils.py
aiutil/gemini/: add_custom_command.py  gcommit.py
aiutil/hadoop/: __init__.py  hdfs.py  kerberos.py  log.py  logf.py  pyspark_submit.py
aiutil/notebook/: search.py  util.py
aiutil/pyscript/: add_github_repo.py  add_pyscript.py  apass.py  etc_sysctl.py  pyscript.txt  release_on_github.py  shebang.py  uv_lint.py
pyscript/: add_pyscript.py
tests/dataframe/: test_dataframe.py
tests/filesystem/: test_filesystem.py
tests/hadoop/log/: test_logf.py
tests/notebook/: test_util.py
tests/poetry/: test_poetry.py
tests/pydev/aiutil/: README.md
tests/pyscript/: test_etc_sysctl.py
tests/shebang/: test_shebang.py
