[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "aiutil"
version = "0.97.0"
description = "A utils Python package for data scientists."
readme = "README.md"
keywords = [
  "AI",
  "Machine Learning",
  "tools",
  "utils",
]
license = "MIT"
authors = [ { name = "Benjamin Du", email = "longendu@yahoo.com" } ]
requires-python = ">=3.11,<4"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "dulwich>=0.20.24",
  "github-rest-api>=0.33.1",
  "loguru>=0.3.2",
  "nbconvert>=7.16.6",
  "nbformat>=5.10.4",
  "notifiers>=1.2.1",
  "numpy>=2.2.6",
  "pandas>=1.2",
  "pexpect>=4.9",
  "python-magic>=0.4",
  "pyyaml>=5.3.1",
  "scikit-image>=0.18.3",
  "sqlparse>=0.4.1",
  "tqdm>=4.59",
]
optional-dependencies.admin = [ "psutil>=5.7.3" ]
optional-dependencies.all = [
  "nbconvert>=5.6.1",
  "nbformat>=5.0.7",
  "opencv-python>=4",
  "pdfplumber>=0.11.7",
  "pillow>=7",
  "psutil>=5.7.3",
  "pypdf>=3.16.1",
  "requests>=2.20",
]
optional-dependencies.cv = [
  "opencv-python>=4",
  "pillow>=7",
]
optional-dependencies.jupyter = [
  "nbconvert>=5.6.1",
  "nbformat>=5.0.7",
]
optional-dependencies.pdf = [
  "pdfplumber>=0.11.7",
  "pypdf>=3.16.1",
]
urls.Repository = "https://github.com/legendu-net/aiutil"
scripts.add_gemini_command = "aiutil.gemini:add_custom_command.main"
scripts.add_github_repo = "aiutil.pyscript:add_github_repo.main"
scripts.add_pyscript = "aiutil.pyscript:add_pyscript.main"
scripts.apass = "aiutil.pyscript.apass:main"
scripts.etc_sysctl = "aiutil.pyscript:etc_sysctl.main"
scripts.gcommit = "aiutil.gemini:gcommit.main"
scripts.logf = "aiutil.hadoop:logf.main"
scripts.match_memory = "aiutil:memory.main"
scripts.pykinit = "aiutil.hadoop:kerberos.main"
scripts.pyspark_submit = "aiutil.hadoop:pyspark_submit.main"
scripts.release_on_github = "aiutil.pyscript:release_on_github.main"
scripts.snb = "aiutil.notebook:search.main"
scripts.uv_lint = "aiutil.pyscript:uv_lint.main"

[dependency-groups]
dev = [
  "deptry>=0.24",
  "pyproject-fmt>=2.21.1",
  "pyright>=1.1.402",
  "pytest>=9.0.2",
  "ruff>=0.11.8",
  "ty>=0.0.8",
]

[tool.ruff]
exclude = [ "tests/notebook/notebooks" ]

[tool.deptry]
package_module_name_map.opencv-python = "cv2"

[tool.ty]
src.exclude = [
  "**/*.ipynb",
]
